--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "devDependencies": {
         "@commitlint/cli": "^8.3.5",
+        "axios": "^0.19.2",
         "cz-customizable": "^6.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
